force-app/main/default/objects/DvsDiscrepancy__c/DvsDiscrepancy__c.object-meta.xml
<CustomObject>
    <description>Company&apos;s discrepancies between Salesforce&apos;s and official national&apos;s information</description>
    <label>DVS Discrepancy</label>
    <nameField>
        <label>DVS Discrepancy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DVS Discrepancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>