force-app/main/default/objects/DvsDiscrepancy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DVS Discrepancies</relationshipLabel>
    <relationshipName>Dvs_Discrepancies</relationshipName>
    <type>Lookup</type>
</CustomField>