force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsCity__c.field-meta.xml
<CustomField>
    <fullName>DvsCity__c</fullName>
    <label>DVS City</label>
    <length>175</length>
    <type>Text</type>
</CustomField>