force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsFirstName__c.field-meta.xml
<CustomField>
    <fullName>DvsFirstName__c</fullName>
    <label>DVS Name</label>
    <length>175</length>
    <type>Text</type>
</CustomField>