force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsId2__c.field-meta.xml
<CustomField>
    <fullName>DvsId2__c</fullName>
    <label>DVS Id 2</label>
    <length>175</length>
    <type>Text</type>
</CustomField>