force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsId__c.field-meta.xml
<CustomField>
    <fullName>DvsId__c</fullName>
    <label>DVS Id</label>
    <length>175</length>
    <type>Text</type>
</CustomField>