force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsPostalCode__c.field-meta.xml
<CustomField>
    <fullName>DvsPostalCode__c</fullName>
    <label>DVS PostalCode</label>
    <length>175</length>
    <type>Text</type>
</CustomField>