force-app/main/default/objects/DvsDiscrepancy__c/fields/DVSStatus__c.field-meta.xml
<CustomField>
    <fullName>DVSStatus__c</fullName>
    <label>DVS Status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>