force-app/main/default/objects/DvsDiscrepancy__c/fields/DvsStreet__c.field-meta.xml
<CustomField>
    <fullName>DvsStreet__c</fullName>
    <label>DVS Street</label>
    <length>175</length>
    <type>Text</type>
</CustomField>