force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceCity__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCity__c</fullName>
    <label>Account City</label>
    <length>175</length>
    <type>Text</type>
</CustomField>