force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceCountryCode__c.field-meta.xml
<CustomField>
    <fullName>SalesforceCountryCode__c</fullName>
    <label>Account Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <default>true</default>
                <label>FR</label>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>