force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceId2__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId2__c</fullName>
    <label>Account Id 2</label>
    <length>175</length>
    <type>Text</type>
</CustomField>