force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <label>Account Id</label>
    <length>175</length>
    <type>Text</type>
</CustomField>