force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceName__c.field-meta.xml
<CustomField>
    <fullName>SalesforceName__c</fullName>
    <label>Account Name</label>
    <length>175</length>
    <type>Text</type>
</CustomField>