force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforcePostalCode__c.field-meta.xml
<CustomField>
    <fullName>SalesforcePostalCode__c</fullName>
    <label>Account Postalcode</label>
    <length>175</length>
    <type>Text</type>
</CustomField>