force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesforceStatus__c</fullName>
    <label>Salesforce status</label>
    <length>150</length>
    <type>Text</type>
</CustomField>