force-app/main/default/objects/DvsDiscrepancy__c/fields/SalesforceStreet__c.field-meta.xml
<CustomField>
    <fullName>SalesforceStreet__c</fullName>
    <label>Account Street</label>
    <length>175</length>
    <type>Text</type>
</CustomField>