force-app/main/default/objects/DvsDiscrepancy__c/fields/SamePostcode__c.field-meta.xml
<CustomField>
    <fullName>SamePostcode__c</fullName>
    <formula>SalesforcePostalCode__c =  DvsPostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Postcode</label>
    <type>Checkbox</type>
</CustomField>