force-app/main/default/objects/DvsDiscrepancy__c/fields/SameStreet__c.field-meta.xml
<CustomField>
    <fullName>SameStreet__c</fullName>
    <description>Same street found</description>
    <formula>AND( ISBLANK(DvsStreet__c) = FALSE,  UPPER(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SalesforceStreet__c, &apos;.&apos;,&apos;&apos;), &apos;ê&apos;,&apos;e&apos;), &apos;û&apos;,&apos;u&apos;), &apos;é&apos;,&apos;e&apos;)) =  DvsStreet__c )</formula>
    <label>Same street</label>
    <type>Checkbox</type>
</CustomField>