force-app/main/default/objects/DvsDiscrepancy__c/fields/SelectToCorrect__c.field-meta.xml
<CustomField>
    <fullName>SelectToCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Podemos seleccionar el campo para elegir cuales hay que corregir</description>
    <label>Select to correct</label>
    <type>Checkbox</type>
</CustomField>