force-app/main/default/objects/DvsDiscrepancy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>DvsName__c</columns>
    <columns>SalesforceStreet__c</columns>
    <columns>DvsStreet__c</columns>
    <columns>SameStreet__c</columns>
    <columns>SalesforcePostalCode__c</columns>
    <columns>DvsPostalCode__c</columns>
    <columns>SamePostcode__c</columns>
    <columns>SalesforceCity__c</columns>
    <columns>DvsCity__c</columns>
    <columns>SalesforceId__c</columns>
    <columns>DvsId__c</columns>
    <columns>SalesforceId2__c</columns>
    <columns>DvsId2__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>