force-app/main/default/objects/DvsDiscrepancy__c/listViews/Registers_with_SIRET_on_SF.listView-meta.xml
<ListView>
    <fullName>Registers_with_SIRET_on_SF</fullName>
    <columns>Account__c</columns>
    <columns>DvsName__c</columns>
    <columns>SalesforceStreet__c</columns>
    <columns>DvsStreet__c</columns>
    <columns>SameStreet__c</columns>
    <columns>SalesforcePostalCode__c</columns>
    <columns>DvsPostalCode__c</columns>
    <columns>SalesforceCity__c</columns>
    <columns>DvsCity__c</columns>
    <columns>SalesforceId__c</columns>
    <columns>DvsId__c</columns>
    <columns>SalesforceId2__c</columns>
    <columns>DvsId2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DvsName__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SalesforceId__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>SameStreet__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DvsName__c</field>
        <operation>notEqual</operation>
        <value>[ND]</value>
    </filters>
    <label>Registers with SIRET on SF</label>
</ListView>